@@ -1,0 +1,60 @@
+<!doctype html public "-//WC3//DTD HTML 4.0 Transitional//EN">
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <title>Hilfe für die GnuPG Shell Extension (GpgEX)</title>
+  </head>
+  <body>
+    <h1>GnuPG Shell Extension</h1>
+    <p>
+      (Verfügbare Sprachen: <a href="gpgex-en.html">English</a>, Deutsch)
+    </p>
+    <p>
+      Die GNU Privacy Guard Erweiterungen für die Windows Explorer
+      Umgebung erlaubt es ihnen, kryptographische Funktionen in
+      Kleopatra über die Kontext-Menüs von Dateien aufzurufen.
+    </p>
+    <h2>Befehle</h2>
+    <h3>Entschlüsseln und verifizieren, Entschlüsseln, Verifizieren</h3>
+    <p>
+      Entschlüsselt und/oder verifiziert die ausgewählten Dateien.
+    </p>
+    <h3>Verschlüsseln und signieren, Verschlüsseln, Signieren</h3>
+    <p>
+      Verschlüsselt und/oder signiert die ausgewählten Dateien.
+    </p>
+    <h3>Zertifikate importieren</h3>
+    <p>
+      Import die Zertifikate in den ausgewählten Dateien.
+    <p>
+    <h3>Prüfsummen erstellen</h3>
+    <p>
+      Erstellt Prüfsummen für die ausgewählten Dateien.
+    </p>
+    <h3>Prüfsummen verifizieren</h3>
+    <p>
+      Verifiziert die Prüfsummen für die ausgewählten Dateien.
+    </p>
+    <h3>Hilfe zu GpgEX</h3>
+    <p>
+      Stellt diese Hilfe dar.
+    </p>
+    <h2>Debugging</h2>
+    <p>
+      Falls nicht auf Kleopatra zugegriffen werden kann, wird ein
+      Nachrichtenfenster mit einer Fehlermeldung angezeigt.  Um mehr
+      Informationen zu erhalten, kann der Fehlerbericht von Kleopatra
+      eingesehen werden, oder es kann eine Debug Datei im Registry Eintrag
+      <code>GpgEX Debug File</code> zum Schlüssel
+      <code>HKLM\Software\GNU\GnuPG</code> angegeben werden.
+      Informationen zum Protokoll werden dann ggf. nach einem Neustart
+      an diese Datei angehangen.
+    </p>
+    <h2>Verweise</h2>
+    <p>
+      Mehr Informationen und aktuelle Versionen sind auf der 
+      <a href="http://www.gpg4win.org/">Gpg4win Webpräsenz</a>
+      verfügbar.
+    </p>
+  </body>
+</html>
