@@ -1,0 +1,57 @@
+<!doctype html public "-//WC3//DTD HTML 4.0 Transitional//EN">
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <title>Help for GnuPG Shell Extension (GpgEX)</title>
+  </head>
+  <body>
+    <h1>GnuPG Shell Extension</h1>
+    <p>
+      (Available languages: English, <a href="gpgex-de.html">Deutsch</a>)
+    </p>
+    <p>
+      The GNU Privacy Guard extensions for the Windows Explorer shell
+      allow you to access cryptographic functions in Kleopatra using
+      the context menu to files.
+    </p>
+    <h2>Commands</h2>
+    <h3>Decrypt and verify, Decrypt, Verify</h3>
+    <p>
+      Decrypt and/or verify the selected files.
+    </p>
+    <h3>Encrypt and sign, Encrypt, Sign</h3>
+    <p>
+      Encrypt and/or sign the selected files.
+    </p>
+    <h3>Import keys</h3>
+    <p>
+      Import certificates in the selected files.
+    <p>
+    <h3>Create checksums</h3>
+    <p>
+      Create checksums for the selected files.
+    </p>
+    <h3>Verify checksums</h3>
+    <p>
+      Verify the checksums for the selected files.
+    </p>
+    <h3>Help on GpgEX</h3>
+    <p>
+      Display this help.
+    </p>
+    <h2>Debugging</h2>
+    <p>
+      If Kleopatra can not be accessed, a message box with an error
+      message will be displayed.  To get more information, you can
+      either check the error log of Kleopatra, or specify a debug file
+      with the registry value <code>GpgEX Debug File</code> in the key
+      <code>HKLM\Software\GNU\GnuPG</code>.  To this file logging
+      information is appended, after a restart if necessary.
+    </p>
+    <h2>References</h2>
+    <p>
+      Please find more information and new versions at
+      the <a href="http://www.gpg4win.org/">Gpg4win web-site</a>.
+    </p>
+  </body>
+</html>
