@@ -1,3 +1,13 @@
+2007-11-08  Marcus Brinkmann  <marcus@g10code.de>
+
+	* po/de.po: Update.
+
+	* doc/gpgex-de.html, doc/gpgex-en.html: New files.
+	* doc/Makefile.am (dist_doc_DATA): New variable.
+
+	* doc/gpgex.texi: Complete protocol change from INPUT FILE to
+	FILE.  Also from IMPORT to IMPORT_FILES.
+
 2007-11-02  Werner Koch  <wk@g10code.com>
 
 	* autogen.sh: Add --force option.
